fix(checkbox): fix tooltips on checkbox labels that wrap

--- a/src/components/checkbox/Checkbox.scss
+++ b/src/components/checkbox/Checkbox.scss
@@ -65,10 +65,10 @@
             }
         }
     }
+}
 
-    .checkbox-label-tooltip-wrapper {
-        margin-left: 10px;
-    }
+.bdl-Checkbox-labelTooltipWrapper {
+    margin-left: 10px;
 }
 
 .checkbox-tooltip-wrapper {
